# mltc

./: LICENSE  README.md  pyproject.toml
examples/iris/: Iris_with_outliers.csv  iris.ipynb  templates.txt
mltc/: main.py  manager.py  merger.py  parser.py  reader.py  selector.py  validator.py  writer.py
mltc/templates/data-analysis/: data-exploration.ipynb
mltc/templates/modelling/: binary-classification.ipynb  multi-class-multi-label-classification.ipynb
mltc/templates/preprocessing/: data-preparation.ipynb
mltc/templates/problem-definition/: problem-definition.ipynb
mltc/templates/setup/: setup.ipynb
step-by-step/: 1-problem-definition.ipynb  2-setup.ipynb  3-data-preparation.ipynb  4-data-exploration.ipynb  5-binary-classification.ipynb  5-multi-class-multi-label-classification.ipynb
tests/: test_merger.py  test_parser.py  test_reader.py  test_selector.py  test_validator.py  test_writer.py
