[tool.poetry]
name = "mltc"
version = "0.0.1"
description = "A simple notebook merging tool to construct (ML) Jupyter notebooks"
repository = "https://github.com/KONRADS098/mltc"
authors = ["Konrad Sokołowski"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mltc" }]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.2.2"
pytest-mock = "~=3.14.0"
ruff = "~=0.5.1"

[tool.poetry.group.cli.dependencies]
click = "~=8.1"

[tool.poetry.group.jupyter.dependencies]
nbformat = "~=5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mltc = "mltc.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/**" = ["D", "ANN201", "S101"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "COM812", "ISC001", "ANN001"]
exclude = ["*.ipynb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
